@@ -15,9 +15,8 @@
    </mechanism>
    <url></url>
    <lang>
-      <postscript level="3">
-      </postscript>
-      <pcl level="5c, 6"/>
+      <postscript level="3" />
+      <pcl level="6"/>
       <!--no pjl-->
       <!--no "text"-->
    </lang>
@@ -31,7 +30,7 @@
        <id>Postscript</id>
      </driver>
      <driver>
-       <id>ljet4dith</id>
+       <id>lj4dith</id>
      </driver>
      <driver>
        <id>ljet4</id>
