@@ -1,3 +1,9 @@
+2009-01-14  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Canon-imageRunner_5000.xml,
+	  printer/Canon-imageRunner_6000.xml: Fixed "lj4dith" entry in
+	  driver list (Bug #293).
+
 2009-01-13  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/mj500c.xml, driver/mj6000c.xml, driver/mj700v2c.xml,
